--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "openweathermap_lib"
-version = "0.1.0"
-edition = "2024"
+version = "0.1.0-pre.1"
+edition = "2021"
+authors = ["Tony Markham"]
+description = "A Rust library for interacting with the OpenWeatherMap API"
+repository = "https://github.com/tonymarkham/rusty-openweathermap-library"
+license = "MIT"
+keywords = ["weather", "openweathermap", "api", "client"]
+categories = ["api-bindings", "web-programming"]
+readme = "README.md"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
