--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openweathermap_lib"
-version = "0.1.0-pre.3"
+version = "0.1.0-pre.4"
 edition = "2021"
 authors = ["Tony Markham"]
 description = "A Rust library for interacting with the OpenWeatherMap API"
@@ -19,3 +19,8 @@ reqwest = { version = "0.12.22", features = ["json"] }
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4"
 serde_json = "1.0.140"
+
+[dev-dependencies]
+mockall = "0.12"
+tokio = { version = "1.0", features = ["full"] }
+async-trait = "0.1"
