--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
 reqwest = { version = "0.12.22", features = ["json"] }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4"
-serde_json = "1.0.140"
+serde_json = "1.0.141"
